src/test/ui/parser/issue-44021.rs
struct MyStruct;
impl MyStruct {
    fn f() {|x, y} //~ ERROR expected one of `:`, `@`, or `|`, found `}`
}

fn main() {}
